--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "start": "concurrently \"npm run react-start\" \"npm run main-start\"",
         "watch": "concurrently \"npm run main-watch\" \"npm run react-watch\"",
         "build": "npm run python-build && npm run react-build && npm run main-build",
+        "build:mac": "npm run python-build && npm run react-build && tsc -p tsconfig.electronMain.json && cross-env npm_config_arch=arm64 ELECTRON_BUILDER_ARCH=arm64 electron-builder --mac",
         "main-lint": "tslint -c tslint.json -p tsconfig.electronMain.json",
         "main-start": "tsc -p tsconfig.electronMain.json && wait-on http://localhost:3000/ && cross-env NODE_ENV=development electron .",
         "main-watch": "tsc -w -p tsconfig.electronMain.json",
@@ -19,9 +20,9 @@
         "react-lint": "tslint -c tslint.json -p tsconfig.json",
         "react-start": "NODE_OPTIONS=--openssl-legacy-provider craco start",
         "react-watch": "tsc -w -p tsconfig.json",
-        "react-build": "craco build",
+        "react-build": "NODE_OPTIONS=--openssl-legacy-provider craco build",
         "python-start": "cd python && python3 api.py --apiport 5002 --signingkey devkey",
-        "python-build": "shx rm -rf pythondist && python3 -m PyInstaller python/api.py --distpath pythondist --workpath build-py-temp --onefile && shx rm -rf build-py-temp && shx rm api.spec"
+        "python-build": "shx rm -rf pythondist && python3 -m PyInstaller python/api.py --distpath pythondist --workpath build-py-temp --onedir && shx rm -rf build-py-temp && shx rm -f api.spec"
     },
     "dependencies": {
         "@craco/craco": "^3.5.0",
@@ -35,6 +36,7 @@
         "apollo-cache-inmemory": "^1.5.1",
         "apollo-client": "^2.5.1",
         "apollo-link-http": "^1.5.14",
+        "bufferutil": "^4.0.9",
         "cross-spawn": "^6.0.5",
         "get-port": "^4.2.0",
         "graphql": "^14.2.0",
@@ -46,6 +48,7 @@
         "shx": "^0.3.2",
         "socket.io-client": "^4.8.1",
         "superagent": "^5.0.2",
+        "utf-8-validate": "^6.0.5",
         "uuid": "^3.3.2"
     },
     "devDependencies": {
@@ -53,7 +56,7 @@
         "concurrently": "^4.1.0",
         "cross-env": "^5.2.0",
         "electron": "^13.0.0",
-        "electron-builder": "^20.39.0",
+        "electron-builder": "^24.13.3",
         "source-map-support": "^0.5.11",
         "tslint": "^5.9.1",
         "tslint-config-standard": "^7.0.0",
@@ -75,7 +78,10 @@
         "appId": "com.camelotdj.musicanalyzer",
         "productName": "CAMELOTDJ - Music Analyzer",
         "forceCodeSigning": false,
-        "asar": false,
+        "asar": true,
+        "asarUnpack": [
+            "pythondist/**"
+        ],
         "icon": "applogo.icns",
         "directories": {
             "buildResources": "build",
@@ -93,7 +99,12 @@
         "extraResources": [],
         "extraFiles": [],
         "mac": {
-            "target": "dir"
+            "target": [
+                {
+                    "target": "zip",
+                    "arch": ["arm64"]
+                }
+            ]
         },
         "mas": {},
         "dmg": {},
