--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     },
     "dependencies": {
         "@craco/craco": "^3.5.0",
+        "@supabase/supabase-js": "^2.56.0",
         "@types/cross-spawn": "^6.0.0",
         "@types/isomorphic-fetch": "0.0.35",
-        "@types/node": "^11.11.3",
         "@types/react": "^16.8.8",
         "@types/react-dom": "^16.8.2",
         "@types/superagent": "^4.1.1",
@@ -38,6 +38,7 @@
         "apollo-link-http": "^1.5.14",
         "bufferutil": "^4.0.9",
         "cross-spawn": "^6.0.5",
+        "firebase": "^12.1.0",
         "get-port": "^4.2.0",
         "graphql": "^14.2.0",
         "graphql-tag": "^2.10.1",
@@ -53,6 +54,7 @@
     },
     "devDependencies": {
         "@types/babel__traverse": "^7.0.15",
+        "@types/node": "^18.19.123",
         "concurrently": "^4.1.0",
         "cross-env": "^5.2.0",
         "electron": "^13.0.0",
@@ -62,7 +64,7 @@
         "tslint-config-standard": "^7.0.0",
         "tslint-loader": "^3.5.3",
         "tslint-react": "^3.4.0",
-        "typescript": "^4.1.6",
+        "typescript": "^5.9.2",
         "wait-on": "^3.2.0"
     },
     "eslintConfig": {
@@ -108,7 +110,9 @@
             "target": [
                 {
                     "target": "zip",
-                    "arch": ["arm64"]
+                    "arch": [
+                        "arm64"
+                    ]
                 }
             ]
         },
