Phase 1 Complete: Implement comprehensive ID3 metadata storage to Firebase Firestore
- Add ID3 metadata extraction to music analysis (title, artist, album, genre, year, etc.)
- Extend database schema with 20+ ID3 metadata columns
- Fix ID3 tag writing errors (use 'grouping' field instead of invalid 'comment' key)
- Update Firestore save functions to include complete metadata
- Fix delete functionality by using database IDs instead of frontend-generated IDs
- Add Firestore security rules for proper authentication
- Integrate metadata storage into analysis pipeline for uploads and YouTube downloads
- All song metadata now automatically synced to Firebase Firestore after analysis

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "build": "npm run python-build && npm run react-build && npm run main-build",
         "build:mac": "npm run python-build && npm run react-build && tsc -p tsconfig.electronMain.json && cross-env npm_config_arch=arm64 ELECTRON_BUILDER_ARCH=arm64 electron-builder --mac",
         "main-lint": "tslint -c tslint.json -p tsconfig.electronMain.json",
-        "main-start": "tsc -p tsconfig.electronMain.json && wait-on http://localhost:3000/ && cross-env NODE_ENV=development electron .",
+        "main-start": "tsc -p tsconfig.electronMain.json && wait-on http://localhost:3001/ && cross-env NODE_ENV=development electron .",
         "main-watch": "tsc -w -p tsconfig.electronMain.json",
         "main-build": "tsc -p tsconfig.electronMain.json && electron-builder",
         "react-lint": "tslint -c tslint.json -p tsconfig.json",
-        "react-start": "NODE_OPTIONS=--openssl-legacy-provider craco start",
+        "react-start": "NODE_OPTIONS=--openssl-legacy-provider PORT=3001 craco start",
         "react-watch": "tsc -w -p tsconfig.json",
         "react-build": "NODE_OPTIONS=--openssl-legacy-provider craco build",
         "python-start": "cd python && python3 api.py --apiport 5002 --signingkey devkey",
@@ -46,6 +46,8 @@
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "react-scripts": "3.0.1",
+        "serve-static": "^1.15.0",
+        "finalhandler": "^1.2.0",
         "shx": "^0.3.2",
         "socket.io-client": "^4.8.1",
         "superagent": "^5.0.2",
