--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
         "apollo-link-http": "^1.5.14",
         "bufferutil": "^4.0.9",
         "cross-spawn": "^6.0.5",
+        "finalhandler": "^1.2.0",
         "firebase": "^12.1.0",
         "get-port": "^4.2.0",
         "graphql": "^14.2.0",
         "graphql-tag": "^2.10.1",
         "isomorphic-fetch": "^2.2.1",
+        "lucide-react": "^0.542.0",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
         "react-scripts": "3.0.1",
         "serve-static": "^1.15.0",
-        "finalhandler": "^1.2.0",
         "shx": "^0.3.2",
         "socket.io-client": "^4.8.1",
         "superagent": "^5.0.2",
