fix: Resolve blank screen issue in production builds
- Fix build directory path resolution for packaged Electron apps
- Add comprehensive path searching for build directory in .asar files
- Update package.json to properly unpack build directory
- Add debugging and error handling for build directory issues
- Ensure React build is accessible to HTTP server in production
- Add extraResources configuration for build directory

--- a/package.json
+++ b/package.json
@@ -87,10 +87,14 @@
         "asarUnpack": [
             "pythondist/**",
             "python/**",
+            "build/**",
+            "build/static/**",
+            "build/static/css/**",
+            "build/static/js/**",
+            "build/static/media/**",
             "build/logwhite.png",
             "build/applogo.png",
-            "logwhite.png",
-            "build/static/logwhite.png"
+            "logwhite.png"
         ],
         "icon": "applogo.icns",
         "directories": {
@@ -107,13 +111,20 @@
             "python/**",
             "build/**"
         ],
-        "extraResources": [],
+        "extraResources": [
+            {
+                "from": "build",
+                "to": "build",
+                "filter": ["**/*"]
+            }
+        ],
         "extraFiles": [],
         "mac": {
             "target": [
                 {
                     "target": "zip",
                     "arch": [
+                        "x64",
                         "arm64"
                     ]
                 }
@@ -123,7 +134,15 @@
         "dmg": {},
         "pkg": {},
         "win": {
-            "target": "nsis"
+            "target": [
+                {
+                    "target": "nsis",
+                    "arch": [
+                        "x64",
+                        "arm64"
+                    ]
+                }
+            ]
         },
         "nsis": {},
         "nsisWeb": {},
