fix: Resolve Firebase environment variable loading issues
- Create missing firebase.ts configuration file
- Add comprehensive environment variable debugging
- Create .env.local file with Firebase configuration
- Update craco config to ensure env vars are loaded
- Add alternative environment variable access methods
- Switch to react-scripts start for better env var support
- Install dotenv package for environment variable loading

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "main-watch": "tsc -w -p tsconfig.electronMain.json",
         "main-build": "tsc -p tsconfig.electronMain.json && electron-builder",
         "react-lint": "tslint -c tslint.json -p tsconfig.json",
-        "react-start": "NODE_OPTIONS=--openssl-legacy-provider PORT=3001 craco start",
+        "react-start": "NODE_OPTIONS=--openssl-legacy-provider PORT=3001 react-scripts start",
         "react-watch": "tsc -w -p tsconfig.json",
         "react-build": "NODE_OPTIONS=--openssl-legacy-provider craco build",
         "python-start": "cd python && python3 api.py --apiport 5002 --signingkey devkey",
@@ -38,6 +38,7 @@
         "apollo-link-http": "^1.5.14",
         "bufferutil": "^4.0.9",
         "cross-spawn": "^6.0.5",
+        "dotenv": "^17.2.1",
         "finalhandler": "^1.2.0",
         "firebase": "^12.1.0",
         "get-port": "^4.2.0",
