Fix electron-builder universal build pattern length issue
- Replace wildcard pattern 'pythondist/**' with specific 'pythondist/api/api'
- Resolves 'pattern is too long' error during universal macOS build
- Maintains ASAR packaging while unpacking only essential Python executable
- Build now completes successfully for both Intel and Apple Silicon architectures

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
         "forceCodeSigning": false,
         "asar": true,
         "asarUnpack": [
-            "pythondist/**",
+            "pythondist/api/api",
             "python/**"
         ],
         "icon": "applogo.icns",
